# AGM

./: .gitignore  LICENSE  README.md  README_RESEARCH.md
.github/workflows/: ci.yml  publish.yml  test.yml
agent-memory/: .dockerignore  .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  LICENSE  README.md  README_PYPI.md  dev.sh  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  smoke_test.py
agent-memory/agent_memory_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  tools.py
agent-memory/agent_memory_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-memory/alembic/: env.py
agent-memory/alembic/versions/: 001_initial_schema.py  002_add_trust_metric_snapshots.py  003_rule_violations.py  004_behavioral_and_state.py  005_defense_layers.py  006_add_session_id_fk_constraint.py  007_add_taint_tracking_fields.py  008_add_sandbagging_context_fields.py
agent-memory/backend/: config.py  database.py  demo_simulation.py  dendritic_cell.py  main.py  models.py  notifications.py  redis_client.py  schemas.py  trust_engine.py
agent-memory/backend/lib/: baseline.py  behavioral_hash.py  checkpoint.py  content_address.py  idempotency.py  quorum_trust.py  reconsolidation.py  taint_propagation.py  vector_clock.py
agent-memory/backend/routers/: admin.py  agents.py  graph.py  memories.py  notifications.py  project.py  stats.py  trust.py  violations.py
agent-memory/backend/rules/: README.md  __init__.py  checker.py  engine.py
agent-memory/backend/tests/: __init__.py  ablation_runner.py  ablation_toggles.py  benchmark_minja.py  conftest.py  test_ablation.py  test_benchmark.py  test_checkpoint.py  test_corruption_recovery.py  test_e2e.py  test_idempotency.py  test_memories.py  test_rules.py  test_sandbagging.py  test_taint_propagation.py  test_trust_engine.py
agent-memory/benchmark_results/: report_20260614_062444.md
agent-memory/docs/: BENCHMARK.md
agent-memory/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
agent-memory/frontend/src/: App.tsx  api.ts
agent-memory/frontend/src/components/: AgentDetailPanel.tsx  BehavioralDriftChart.tsx  Graph3D.tsx  ImmunologyPanel.tsx  NotificationBell.tsx  ProjectIngest.tsx  ui.tsx
agent-memory/frontend/src/lib/: severity.ts  timeAgo.ts
agent-memory/frontend/src/pages/: AgentsPage.tsx  AttacksPage.tsx  DashboardPage.tsx  GraphPage.tsx  MemoriesPage.tsx  RulesPage.tsx  ViolationsPage.tsx
agent-memory/frontend/src/types/: d3-force-3d.d.ts
agent-memory/tests/: test_mcp_tools.py
backend/: test_foreign_agents.py
docs/: ARCHITECTURE.md  BENCHMARK.md  DEPLOYMENT.md  RESEARCH.md
