[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-mcp"
version = "0.1.0"
description = "MCP server exposing AgentMemory REST API operations as tools (stdio transport)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AGM contributors" }]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://github.com/example/agent-memory"

[project.scripts]
agent-memory-mcp = "agent_memory_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_memory_mcp*"]
