[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agm-memory-mcp"
version = "0.1.0"
description = "AGM — Agent Memory Management. Provenance-tagged memory infrastructure for multi-agent AI systems. MCP server with trust scoring, behavioral fingerprinting, and memory poisoning defense."
readme = "README_PYPI.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Deep Shahane", email = "esotericdeep@gmail.com" }
]
keywords = [
    "mcp",
    "agm",
    "agent-memory",
    "ai-agents",
    "memory",
    "trust",
    "provenance",
    "multi-agent",
    "llm",
    "agent-security",
    "model-context-protocol",
    "memory-poisoning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20"
]

[project.urls]
Homepage = "https://github.com/Deep-De-coder/agent-memory"
Documentation = "https://github.com/Deep-De-coder/agent-memory#readme"
Repository = "https://github.com/Deep-De-coder/agent-memory"
"Bug Tracker" = "https://github.com/Deep-De-coder/agent-memory/issues"

[project.scripts]
agm-memory-mcp = "agent_memory_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_memory_mcp*"]
exclude = ["tests*", "backend*", "frontend*"]

[tool.setuptools.package-data]
agent_memory_mcp = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
